// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display Mind Brow Hubris Circlet 1`] = `
<div
  className="poe-item rare"
  style={
    Object {
      "width": "auto",
    }
  }
>
  <header
    className="double-line shaper"
  >
    <span
      className="name-left"
    />
    <div
      className="item-name"
    >
      Mind Brow
    </div>
    <div
      className="item-name typeLine"
    >
      <span>
        Hubris Circlet
      </span>
    </div>
    <span
      className="name-right"
    />
  </header>
  <section
    className="body"
  >
    <div
      className="displayProperty"
    >
      <span
        className="lc"
      >
        Quality
        : 
        <span
          className="augmented"
        >
          6%
        </span>
      </span>
    </div>
    <div
      className="displayProperty"
    >
      <span
        className="lc"
      >
        energy shield
        : 
        <span
          className="augmented"
        >
          200
        </span>
      </span>
    </div>
    <div
      className="separator"
    />
    <div
      className="requirements"
    >
      <span
        className="lc"
      >
        Requires
         
        <span>
          Level
        </span>
         
        <span>
          <span
            className="simple"
          >
            69
          </span>
        </span>
        , 
        <span>
          <span
            className="simple"
          >
            154
          </span>
        </span>
         
        <span>
          Int
        </span>
      </span>
    </div>
    <div
      className="separator"
    />
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        Place an additional Mine
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        Socketed Gems are Supported by Level 18 Remote Mine
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        16% increased Effect of Chill
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        Socketed Gems are Supported by Level 18 Hypothermia
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        +1 to Level of Socketed Minion Gems
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        +67 to maximum Life
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        18% increased Stun and Block Recovery
      </span>
    </div>
    <div
      className="explicitMod"
    >
      <span
        className="lc"
      >
        Adds 5 to 89 Lightning Damage to Spells
      </span>
    </div>
  </section>
</div>
`;

exports[`should display Noble Axe 1`] = `
<div
  className="poe-item normal"
  style={
    Object {
      "width": "auto",
    }
  }
>
  <header
    className=""
  >
    <span
      className="name-left"
    />
    <div
      className="item-name typeLine"
    >
      <span>
        Noble Axe
      </span>
    </div>
    <span
      className="name-right"
    />
  </header>
  <section
    className="body"
  >
    <div
      className="displayProperty"
    >
      <span
        className="lc"
      >
        Attacks per Second
        : 
        <span
          className="simple"
        >
          1.30
        </span>
      </span>
    </div>
    <div
      className="separator"
    />
    <div
      className="requirements"
    >
      <span
        className="lc"
      >
        Requires
         
        <span>
          Level
        </span>
         
        <span>
          <span
            className="simple"
          >
            65
          </span>
        </span>
        , 
        <span>
          <span
            className="simple"
          >
            113
          </span>
        </span>
         
        <span>
          Str
        </span>
      </span>
    </div>
  </section>
</div>
`;
